# rust_sodium

./: .gitignore  Cargo.toml
rust_sodium-sys/: Cargo.toml  build.rs
rust_sodium-sys/src/: lib.rs
src/: lib.rs
