[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
categories = ["cryptography"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
edition = "2018"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR BSD-3-Clause"
name = "rust_sodium"
readme = "README.md"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.10.2"

[dependencies]
libc = "0.2"
rand = "0.8"
rust_sodium-sys = { git = "https://github.com/voysys/rust_sodium.git", tag = "voysys-2" }
serde = "1"
unwrap = "1"

[dev-dependencies]
hex = "0.4"
rmp-serde = "1"
serde_json = "1"

[features]
benchmarks = []
