[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
build = "build.rs"
categories = ["api-bindings", "cryptography"]
description = "Raw bindings to libsodium"
edition = "2018"
homepage = "https://maidsafe.net"
keywords = ["crypto", "cryptographic", "cryptography", "sodium"]
license = "MIT OR BSD-3-Clause"
links = "sodium"
name = "rust_sodium-sys"
repository = "https://github.com/maidsafe/rust_sodium"
version = "0.10.4"

[dependencies]
lazy_static = "1"
libc = "0.2"
rand = "0.4"
unwrap = "1"

[build-dependencies]
cc = "1"
flate2 = "1"
libc = "0.2"
pkg-config = "0.3"
http_req = "0.10"
sha2 = "0.10"
tar = "0.4"
unwrap = "1"
zip = "0.6"
